align fix

--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ body {
 .me-description p {
   font-size: 20px;
   font-family: "AnonnymousPro-Regular";
-  text-align: justify;
+  text-align: left;
 }
 
 .skill-content {
@@ -377,7 +377,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
 }
 
 .item-skill h1 {
